--- a/src/style.css
+++ b/src/style.css
@@ -17,6 +17,16 @@ li {
 .help-text {
 }
 
+.network-item {
+  display: inline-block;
+}
+
+.wifi-icon {
+  height: 60px;
+  width: 60px;
+  vertical-align: middle;
+}
+
 .scan-button {
   width: 6%;
   height: 3%;
