--- a/src/style.css
+++ b/src/style.css
@@ -6,12 +6,131 @@ li :hover {
 li {
   padding-top: 0;
   padding-bottom: 0;
+  color: #fffff0;
+}
+
+p {
+  color: #fffff0;
+}
+
+h1 {
+  color: #fffff0;
+}
+h2 {
+  color: #fffff0;
+}
+h3 {
+  color: #fffff0;
+}
+
+span {
+  color: #fffff0;
 }
 
 header {
   text-align: center;
-  margin: 2px 2px 2px 2px;
-  background-color: khaki;
+
+  background-color: black;
+}
+
+p {
+  color: #fffff0;
+}
+
+header img {
+  height: 60px;
+}
+
+input {
+  width: 350px;
+  max-height: 20px;
+}
+
+text tspan {
+  color: #fffff0;
+}
+
+tr {
+  color: #fffff0;
+}
+
+text {
+  font-size: 12px;
+  fill: rgba(255, 255, 255, 0.9);
+  color: #fffff0;
+  font-weight: lighter;
+}
+text tspan {
+  font-size: 22px;
+}
+
+.overflow {
+  height: 20;
+  overflow: hidden;
+}
+
+.overflow:hover {
+  overflow: initial;
+}
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
+}
+
+.biplaneColumn {
+  display: flex;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.container {
+  text-align: center;
+  padding-bottom: 32px;
+  background-color: black;
+}
+
+.vbox {
+  background-color: violet;
+}
+
+.others {
+  flex-direction: row;
+  display: flex;
+  padding: 5 0 5 0;
+  background-color: lightcoral;
+}
+
+.others-item {
+  flex-direction: column;
+  background-color: lightcyan;
+}
+
+.arrow-button {
+  vertical-align: middle;
+  margin-left: 90%;
+  justify-content: flex-end;
+  justify-items: flex-end;
+}
+
+.descriptive {
+  font-size: 10px;
+  color: darkgray;
+  font-style: italic;
+}
+
+.hbox {
+  display: flex;
+  justify-content: space-around;
+  background-color: blanchedalmond;
+}
+
+.allblack {
+  background-color: black;
+
+  padding: 30;
 }
 
 .meterwrapper {
@@ -20,7 +139,6 @@ header {
 }
 
 .components-view {
-  display: flex;
 }
 
 .ports-list {
@@ -29,13 +147,11 @@ header {
 
 .ports {
   background-color: lightgreen;
-  display: flex;
-  margin-top: 50%;
 }
 
 .passwordstrengthmeter {
-  display: flex;
-  justify-content: space-between;
+  width: inherit;
+  background-color: initial;
 }
 
 .upper-section-mobile {
@@ -57,6 +173,7 @@ header {
 }
 
 .help-text {
+  width: inherit;
 }
 
 .network-item {
@@ -78,11 +195,6 @@ header {
   border-style: double;
 }
 
-text {
-  font-size: 12px;
-  font-weight: lighter;
-}
-
 .selected {
   color: blue;
   background-color: wheat;
@@ -94,9 +206,8 @@ text {
 }
 
 .bar {
-  position: relative;
   height: 20px;
-  width: 350px;
+  width: inherit;
   border-radius: 25px;
   border: 1px solid #f5f5f5;
 }
@@ -105,7 +216,7 @@ text {
   background: red;
   height: 100%;
   border-radius: inherit;
-  transition: width 0.2s ease-in;
+  transition: width 0.4s ease-in;
 }
 
 .filler-green {
@@ -119,5 +230,74 @@ text {
   background: orange;
   height: 100%;
   border-radius: inherit;
-  transition: width 0.2s ease-in;
+  transition: width 0.3s ease-in;
+}
+
+.allblue {
+  background-color: blue;
+  background: blue;
+}
+
+.allgreen {
+  background-color: green;
+  background: green;
+}
+
+.allyellow {
+  background: yellow;
+  background-color: yellow;
+}
+
+/* BOOTSTRAP START */
+
+.card-stats .icon-big {
+  font-size: 3em;
+  min-height: 64px;
+}
+
+.card {
+  border-radius: 4px;
+  box-shadow: 0 1px 2px rgba(2, 169, 247, 0.9), 0 0 0 1px rgba(2, 87, 122, 0.3);
+  background-color: darkblue;
+  margin-bottom: 30px;
+}
+.card:hover {
+  border-radius: 4px;
+  box-shadow: 0 1px 2px rgba(2, 169, 247, 0.9), 0 0 0 1px rgba(2, 87, 122, 0.3);
+  background-color: #d4fffc;
+  margin-bottom: 30px;
+}
+
+.numbers {
+  font-size: 1.5em;
+  text-align: start;
+  width: inherit;
+}
+.numbers p {
+  text-align: start;
+  font-size: 11px;
+  margin-left: 0;
+  padding-left: 0;
+}
+
+.stats {
+  color: #a9a9a9;
+}
+
+.footer div {
+  display: inline-block;
+}
+
+.card-icon {
+  width: 60px;
+  height: 60px;
+}
+
+.horizontal-line {
+  width: 90%;
+}
+
+Table img {
+  width: 30px;
+  height: 30px;
 }
