--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,15 +1,20 @@
+
+
 .navbar {
   background-color: #101b73;
   height: 80px;
   display: flex;
   justify-content: start;
   align-items: center;
+  z-index: 1;
 }
+
 
 .menu-bars {
   margin-left: 2rem;
   font-size: 2rem;
   background: none;
+  z-index: 1;
 }
 
 .nav-menu {
@@ -22,11 +27,13 @@
   top: 0;
   left: -100%;
   transition: 850ms;
+  z-index: 1;
 }
 
 .nav-menu.active {
   left: 0;
   transition: 350ms;
+  z-index: 1;
 }
 
 .nav-text {
@@ -36,6 +43,7 @@
   padding: 8px 0px 8px 16px;
   list-style: none;
   height: 60px;
+  z-index: 1;
 }
 
 .nav-text a {
@@ -48,14 +56,17 @@
   align-items: center;
   padding: 0 16px;
   border-radius: 4px;
+  z-index: 1;
 }
 
 .nav-text a:hover {
   background-color: #1a83ff;
+  z-index: 1;
 }
 
 .nav-menu-items {
   width: 100%;
+  z-index: 1;
 }
 
 .navbar-toggle {
@@ -65,8 +76,10 @@
   display: flex;
   justify-content: start;
   align-items: center;
+  z-index: 1;
 }
 
 span {
   margin-left: 16px;
+  z-index: 1;
 }
